# ai-bootcamp-codespace

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: evaluations.yml  lint.yml  tests.yml
capstone_project/: .env.example  Makefile  README.md  README_llm_framework.md  capybara_agent.ipynb  sec_cybersecurity_agent.ipynb  sec_edgar_client.py  sec_search_tools.py  test_f5.py
capstone_project/capstone_project/monitoring/: monitoring.db
capstone_project/data/: check_and_index_ground_truth.py  check_index_status.py  fetch_historical_filings.py  index_cybersecurity_companies.py  index_ground_truth_filings.py  index_home_depot_8k.py  index_home_depot_all_filings.py  index_missing_disclosures.py  indexing_log.txt  indexing_results.json  missing_disclosures_indexing_results.json  reindex_missing.py  reindex_missing_log.txt  test_f5.py
capstone_project/data/sec_downloads/: aap-20240523.htm  an-20240619.htm  an-20240715.htm  clx-20231231.htm  d242666d8ka.htm  lyv-20240613.htm
capstone_project/documentation/: CIK_LOOKUP_FIX.md  DATA_SOURCE_TRANSPARENCY_FIX.md  ENTITY_RESOLUTION_IMPROVEMENTS.md  FIX_DOCKER_MALWARE_FALSE_POSITIVE.md  HOME_DEPOT_INDEXING_STATUS.md  INDEXING_GUIDE.md  MISSING_DISCLOSURES_COMPLETE.md  MISSING_DISCLOSURES_INDEXING.md  QUESTION_2_ANSWER.md  QUESTION_3_ANSWER.md  QUESTION_4_ANSWER.md  README_data_strategy.md  README_search_tools.md  README_tooling.md  STRESS_TEST_V2_RESULTS.md  SUBSIDIARY_MAPPING_GUIDE.md  USE_THE_AGENT.md  fix_docker_security.md
capstone_project/eval/: ground_truth_2024_2025.json  ground_truth_2024_2025_sec_filings.csv  ground_truth_21_cases.csv  ground_truth_indexing_results.json  judge_evaluation_results.json  judge_evaluator.py  stress_test_questions.csv  stress_test_questions_21_cases.csv  stress_test_results.json  stress_test_results_v1_backup.json
capstone_project/monitoring/: __init__.py  agent_logging.py  app.py  create_sample_log.py  db.py  evaluator.py  export_ground_truth.py  parser.py  runner.py  schemas.py
capstone_project/src/: check_elasticsearch.py  company_cik_lookup.py  run_stress_tests.py  sec_agent_poc.ipynb  sec_cybersecurity_agent.ipynb  sec_edgar_client.py  sec_edgar_example.ipynb  sec_filing_chunker_example.ipynb  sec_xml_parser.py  setup_elasticsearch.sh  setup_elasticsearch_native.sh  subsidiary_cik_mapping.py  test_agent.py  test_es_connection.py
capstone_project/wikiagent/: main.py  tools.py  wikipedia_agent.py
logs/: wikipedia_agent_20251116_212822_432645.json  wikipedia_agent_20251116_212827_4543fb.json
scripts/: check-uv.sh
week2/: agents-intro.ipynb
week3/: wikipedia_agent.ipynb
week3/code/: Makefile  pyproject.toml
week3/code/evals/: INSPECTOR_GUIDE.md  README.md  inspect_eval_results.py  inspect_ground_truth.py
week3/tests/: README.md  __init__.py  conftest.py  test_wikipedia_agent.py
week3/wikiagent/: README.md  README_ground_truth.md  __init__.py  ground_truth_output.txt  main.py  pyproject.toml  run_ground_truth.py  wikipedia_agent.py
week4/code/: .gitignore  docker-compose.yml  pyproject.toml  ver3.py  ver3_langwarch.py
week4/guardrails-agents-sdk/: agents-sdk.ipynb
week5/1-coding-agent/: coding-agent.ipynb  multi-agent.ipynb
week5/2-project-scorer/: notebook.ipynb
(+586 files in other folders)
