[tool.poetry]
name = "ai-bootcamp-codespace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = ">=9.1.1"
jupyter = ">=1.1.1"
minsearch = ">=0.0.7"
openai-agents = "==0.3.3"
pydantic-ai = ">=1.0.17"
python-frontmatter = ">=1.1.0"
qdrant-client = {extras = ["fastembed"], version = ">=1.15.1"}
requests = ">=2.32.5"
sentence-transformers = ">=5.1.1"
toyaikit = "==0.0.5"
tqdm = ">=4.67.1"
youtube-transcript-api = ">=1.2.2"
python-dotenv = ">=1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
