[project]
name = "ai-bootcamp-codespace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxn>=0.0.1",
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai-agents==0.5.0",
    "pydantic-ai>=1.0.17",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "toyaikit==0.0.8",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.2.2",
]

