[tool.poetry]
name = "ai-bootcamp-codespace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
jaxn = ">=0.0.1"
jupyter = ">=1.1.1"
minsearch = ">=0.0.7"
openai-agents = "==0.5.0"
pydantic-ai = ">=1.0.17"
python-frontmatter = ">=1.1.0"
requests = ">=2.32.5"
toyaikit = "==0.0.5"
tqdm = ">=4.67.1"
youtube-transcript-api = ">=1.2.2"
# Additional dependencies from local setup
elasticsearch = ">=8.0.0,<9.0.0"
qdrant-client = {extras = ["fastembed"], version = ">=1.15.1"}
sentence-transformers = ">=5.1.1"
python-dotenv = ">=1.2.1"
streamlit = "^1.51.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
