[tool.poetry]
name = "code"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
evidently = ">=0.7.15"
minsearch = ">=0.0.7"
openai = ">=1.109.1"
pydantic-ai = ">=1.0.17"
python-frontmatter = ">=1.1.0"
requests = ">=2.32.5"
tiktoken = ">=0.12.0"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.1.1"
langwatch-scenario = ">=0.7.13"
pytest = ">=8.4.2"
pytest-asyncio = ">=1.2.0"
streamlit = ">=1.40.0"
toyaikit = ">=0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
